@@ -58,5 +58,9 @@
 #define HAVE_DEBUG_OUTPUT	1
  */
 
+/* Enable the v1 API
+ */
+#define HAVE_V1_API		1
+
 #endif
 
