@@ -50,10 +50,6 @@ enum LIBLNK_ACCESS_FLAGS
 /* Reserved: not supported yet */
 #define LIBLNK_OPEN_READ_WRITE						( LIBLNK_ACCESS_FLAG_READ | LIBLNK_ACCESS_FLAG_WRITE )
 
-/* TODO deprecated remove after a while */
-#define LIBLNK_FLAG_READ						LIBLNK_ACCESS_FLAG_READ
-#define LIBLNK_FLAG_WRITE						LIBLNK_ACCESS_FLAG_WRITE
-
 /* The data flags
  */
 enum LIBLNK_DATA_FLAGS
